// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SpaceRoleEditor renders the component 1`] = `
<SpaceRoleEditor
  onChange={[MockFunction]}
  options={
    Array [
      Object {
        "name": "Police officer",
        "sys": Object {
          "id": "police",
        },
      },
      Object {
        "name": "Thief",
        "sys": Object {
          "id": "thief",
        },
      },
    ]
  }
  value={Array []}
>
  <Dropdown
    isOpen={false}
    onClose={[Function]}
    position="bottom-left"
    style={
      Object {
        "maxWidth": "100%",
      }
    }
    testId="cf-ui-dropdown"
    toggleElement={
      <Button
        buttonType="naked"
        className="select-button"
        disabled={false}
        indicateDropdown={true}
        isFullWidth={false}
        loading={false}
        onClick={[Function]}
        testId="cf-ui-button"
        type="button"
      >
        Select a role
      </Button>
    }
  >
    <div
      className="Dropdown__Dropdown___1qyn8"
      data-test-id="cf-ui-dropdown"
      onClose={[Function]}
      position="bottom-left"
      style={
        Object {
          "maxWidth": "100%",
        }
      }
    >
      <Button
        buttonType="naked"
        className="select-button"
        disabled={false}
        indicateDropdown={true}
        isFullWidth={false}
        loading={false}
        onClick={[Function]}
        testId="cf-ui-button"
        type="button"
      >
        <button
          className="Button__Button___1ZfFj a11y__focus-border--default___60AXp select-button Button__Button--naked___mB6LS"
          data-test-id="cf-ui-button"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          type="button"
        >
          <TabFocusTrap
            className="Button__Button__inner-wrapper___3qrNC"
          >
            <span
              className="TabFocusTrap__TabFocusTrap___39Vty Button__Button__inner-wrapper___3qrNC"
              tabIndex={-1}
            >
              <span
                className="Button__Button__label___3tcOj"
              >
                Select a role
              </span>
              <Icon
                color="secondary"
                icon="ArrowDown"
                size="small"
                testId="cf-ui-icon"
              >
                <ArrowDown
                  className="Icon__Icon___38Epv Icon__Icon--small___1yGZK Icon__Icon--secondary___1ztcw"
                  data-test-id="cf-ui-icon"
                  height="24"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <svg
                    className="Icon__Icon___38Epv Icon__Icon--small___1yGZK Icon__Icon--secondary___1ztcw"
                    data-test-id="cf-ui-icon"
                    height="24"
                    viewBox="0 0 24 24"
                    width="24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M7 10l5 5 5-5z"
                    />
                    <path
                      d="M0 0h24v24H0z"
                      fill="none"
                    />
                  </svg>
                </ArrowDown>
              </Icon>
              <CSSTransition
                classNames={
                  Object {
                    "enter": "Button__Button--spinner--enter___1qgg7",
                    "enterActive": "Button__Button--spinner-active___EEKjQ",
                    "exit": "Button__Button--spinner--exit___2RUI-",
                    "exitActive": "Button__Button--spinner-exit-active___3HXa7",
                  }
                }
                in={false}
                mountOnEnter={true}
                timeout={1000}
                unmountOnExit={true}
              >
                <Transition
                  appear={false}
                  enter={true}
                  exit={true}
                  in={false}
                  mountOnEnter={true}
                  onEnter={[Function]}
                  onEntered={[Function]}
                  onEntering={[Function]}
                  onExit={[Function]}
                  onExited={[Function]}
                  onExiting={[Function]}
                  timeout={1000}
                  unmountOnExit={true}
                />
              </CSSTransition>
            </span>
          </TabFocusTrap>
        </button>
      </Button>
    </div>
  </Dropdown>
</SpaceRoleEditor>
`;

exports[`SpaceRoleEditor shows a list of options 1`] = `
<SpaceRoleEditor
  onChange={[MockFunction]}
  options={
    Array [
      Object {
        "name": "Police officer",
        "sys": Object {
          "id": "police",
        },
      },
      Object {
        "name": "Thief",
        "sys": Object {
          "id": "thief",
        },
      },
    ]
  }
  value={Array []}
>
  <Dropdown
    isOpen={true}
    onClose={[Function]}
    position="bottom-left"
    style={
      Object {
        "maxWidth": "100%",
      }
    }
    testId="cf-ui-dropdown"
    toggleElement={
      <Button
        buttonType="naked"
        className="select-button"
        disabled={false}
        indicateDropdown={true}
        isFullWidth={false}
        loading={false}
        onClick={[Function]}
        testId="cf-ui-button"
        type="button"
      >
        Select a role
      </Button>
    }
  >
    <div
      className="Dropdown__Dropdown___1qyn8"
      data-test-id="cf-ui-dropdown"
      onClose={[Function]}
      position="bottom-left"
      style={
        Object {
          "maxWidth": "100%",
        }
      }
    >
      <Button
        buttonType="naked"
        className="select-button"
        disabled={false}
        indicateDropdown={true}
        isFullWidth={false}
        loading={false}
        onClick={[Function]}
        testId="cf-ui-button"
        type="button"
      >
        <button
          className="Button__Button___1ZfFj a11y__focus-border--default___60AXp select-button Button__Button--naked___mB6LS"
          data-test-id="cf-ui-button"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          type="button"
        >
          <TabFocusTrap
            className="Button__Button__inner-wrapper___3qrNC"
          >
            <span
              className="TabFocusTrap__TabFocusTrap___39Vty Button__Button__inner-wrapper___3qrNC"
              tabIndex={-1}
            >
              <span
                className="Button__Button__label___3tcOj"
              >
                Select a role
              </span>
              <Icon
                color="secondary"
                icon="ArrowDown"
                size="small"
                testId="cf-ui-icon"
              >
                <ArrowDown
                  className="Icon__Icon___38Epv Icon__Icon--small___1yGZK Icon__Icon--secondary___1ztcw"
                  data-test-id="cf-ui-icon"
                  height="24"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <svg
                    className="Icon__Icon___38Epv Icon__Icon--small___1yGZK Icon__Icon--secondary___1ztcw"
                    data-test-id="cf-ui-icon"
                    height="24"
                    viewBox="0 0 24 24"
                    width="24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M7 10l5 5 5-5z"
                    />
                    <path
                      d="M0 0h24v24H0z"
                      fill="none"
                    />
                  </svg>
                </ArrowDown>
              </Icon>
              <CSSTransition
                classNames={
                  Object {
                    "enter": "Button__Button--spinner--enter___1qgg7",
                    "enterActive": "Button__Button--spinner-active___EEKjQ",
                    "exit": "Button__Button--spinner--exit___2RUI-",
                    "exitActive": "Button__Button--spinner-exit-active___3HXa7",
                  }
                }
                in={false}
                mountOnEnter={true}
                timeout={1000}
                unmountOnExit={true}
              >
                <Transition
                  appear={false}
                  enter={true}
                  exit={true}
                  in={false}
                  mountOnEnter={true}
                  onEnter={[Function]}
                  onEntered={[Function]}
                  onEntering={[Function]}
                  onExit={[Function]}
                  onExited={[Function]}
                  onExiting={[Function]}
                  timeout={1000}
                  unmountOnExit={true}
                />
              </CSSTransition>
            </span>
          </TabFocusTrap>
        </button>
      </Button>
      <DropdownContainer
        anchorDimensionsAndPositon={
          Object {
            "height": 0,
            "left": 0,
            "top": 0,
            "width": 0,
          }
        }
        dropdownAnchor={
          <div
            class="Dropdown__Dropdown___1qyn8"
            data-test-id="cf-ui-dropdown"
            position="bottom-left"
            style="max-width: 100%;"
          >
            <button
              class="Button__Button___1ZfFj a11y__focus-border--default___60AXp select-button Button__Button--naked___mB6LS"
              data-test-id="cf-ui-button"
              type="button"
            >
              <span
                class="TabFocusTrap__TabFocusTrap___39Vty Button__Button__inner-wrapper___3qrNC"
                tabindex="-1"
              >
                <span
                  class="Button__Button__label___3tcOj"
                >
                  Select a role
                </span>
                <svg
                  class="Icon__Icon___38Epv Icon__Icon--small___1yGZK Icon__Icon--secondary___1ztcw"
                  data-test-id="cf-ui-icon"
                  height="24"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M7 10l5 5 5-5z"
                  />
                  <path
                    d="M0 0h24v24H0z"
                    fill="none"
                  />
                </svg>
              </span>
            </button>
          </div>
        }
        onClose={[Function]}
        openSubmenu={[Function]}
        position="bottom-left"
        submenu={false}
        testId="cf-ui-dropdown-portal"
      >
        <Portal
          containerInfo={
            <div>
              <div
                class="DropdownContainer__DropdownContainer___3WlJM"
                style="top: 0px; left: 0px;"
              >
                <div
                  class="InViewport__InViewport___2o6g4"
                  data-test-id="cf-ui-in-viewport"
                  offset="0"
                >
                  <ul
                    class="DropdownList__DropdownList___2EMLM"
                    data-test-id="cf-ui-dropdown-list"
                    style="max-height: 300px; overflow-y: auto;"
                  >
                    <li
                      class="DropdownListItem__DropdownListItem___LOUnP"
                      data-test-id="cf-ui-dropdown-list-item"
                    >
                      <div
                        class="ControlledInputField__ControlledInputField___2uIG9"
                        data-test-id="cf-ui-checkbox-field"
                      >
                        <input
                          aria-label="Admin"
                          class="ControlledInput__ControlledInput___2XK3j ControlledInputField__ControlledInputField__input___3OMYB"
                          data-test-id="cf-ui-controlled-input"
                          id="__cf_builtin_admin"
                          type="checkbox"
                          value=""
                        />
                        <div>
                          <label
                            class="FormLabel__FormLabel___3d6zQ ControlledInputField__ControlledInputField__label___a9J52 ControlledInputField__ControlledInputField__label--light___2G2AZ"
                            data-test-id="cf-ui-form-label"
                            for="__cf_builtin_admin"
                          >
                            Admin
                          </label>
                        </div>
                      </div>
                    </li>
                    <li
                      class="DropdownListItem__DropdownListItem___LOUnP"
                      data-test-id="cf-ui-dropdown-list-item"
                    >
                      <div
                        class="ControlledInputField__ControlledInputField___2uIG9"
                        data-test-id="cf-ui-checkbox-field"
                      >
                        <input
                          aria-label="Police officer"
                          class="ControlledInput__ControlledInput___2XK3j ControlledInputField__ControlledInputField__input___3OMYB"
                          data-test-id="cf-ui-controlled-input"
                          id="police"
                          type="checkbox"
                          value="police"
                        />
                        <div>
                          <label
                            class="FormLabel__FormLabel___3d6zQ ControlledInputField__ControlledInputField__label___a9J52 ControlledInputField__ControlledInputField__label--light___2G2AZ"
                            data-test-id="cf-ui-form-label"
                            for="police"
                          >
                            Police officer
                          </label>
                        </div>
                      </div>
                    </li>
                    <li
                      class="DropdownListItem__DropdownListItem___LOUnP"
                      data-test-id="cf-ui-dropdown-list-item"
                    >
                      <div
                        class="ControlledInputField__ControlledInputField___2uIG9"
                        data-test-id="cf-ui-checkbox-field"
                      >
                        <input
                          aria-label="Thief"
                          class="ControlledInput__ControlledInput___2XK3j ControlledInputField__ControlledInputField__input___3OMYB"
                          data-test-id="cf-ui-controlled-input"
                          id="thief"
                          type="checkbox"
                          value="thief"
                        />
                        <div>
                          <label
                            class="FormLabel__FormLabel___3d6zQ ControlledInputField__ControlledInputField__label___a9J52 ControlledInputField__ControlledInputField__label--light___2G2AZ"
                            data-test-id="cf-ui-form-label"
                            for="thief"
                          >
                            Thief
                          </label>
                        </div>
                      </div>
                    </li>
                  </ul>
                </div>
              </div>
            </div>
          }
        >
          <div
            className="DropdownContainer__DropdownContainer___3WlJM"
            onFocus={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            style={
              Object {
                "left": 0,
                "top": 0,
              }
            }
          >
            <InViewport
              offset={0}
              onOverflowBottom={[Function]}
              onOverflowLeft={[Function]}
              onOverflowRight={[Function]}
              onOverflowTop={[Function]}
              testId="cf-ui-in-viewport"
            >
              <div
                className="InViewport__InViewport___2o6g4"
                data-test-id="cf-ui-in-viewport"
                offset={0}
              >
                <DropdownList
                  maxHeight={300}
                  testId="cf-ui-dropdown-list"
                >
                  <ul
                    className="DropdownList__DropdownList___2EMLM"
                    data-test-id="cf-ui-dropdown-list"
                    style={
                      Object {
                        "maxHeight": 300,
                        "overflowY": "auto",
                      }
                    }
                  >
                    <DropdownListItem
                      isActive={false}
                      isDisabled={false}
                      isTitle={false}
                      testId="cf-ui-dropdown-list-item"
                    >
                      <li
                        className="DropdownListItem__DropdownListItem___LOUnP"
                        data-test-id="cf-ui-dropdown-list-item"
                      >
                        <CheckboxField
                          checked={false}
                          id="__cf_builtin_admin"
                          inputType="checkbox"
                          labelIsLight={true}
                          labelText="Admin"
                          onChange={[Function]}
                          testId="cf-ui-checkbox-field"
                        >
                          <ControlledInputField
                            checked={false}
                            id="__cf_builtin_admin"
                            inputType="checkbox"
                            labelIsLight={true}
                            labelText="Admin"
                            onChange={[Function]}
                            testId="cf-ui-checkbox-field"
                          >
                            <div
                              className="ControlledInputField__ControlledInputField___2uIG9"
                              data-test-id="cf-ui-checkbox-field"
                            >
                              <ControlledInput
                                checked={false}
                                className="ControlledInputField__ControlledInputField__input___3OMYB"
                                disabled={false}
                                id="__cf_builtin_admin"
                                labelText="Admin"
                                onChange={[Function]}
                                required={false}
                                testId="cf-ui-controlled-input"
                                type="checkbox"
                              >
                                <input
                                  aria-label="Admin"
                                  checked={false}
                                  className="ControlledInput__ControlledInput___2XK3j ControlledInputField__ControlledInputField__input___3OMYB"
                                  data-test-id="cf-ui-controlled-input"
                                  disabled={false}
                                  id="__cf_builtin_admin"
                                  onBlur={[Function]}
                                  onChange={[Function]}
                                  onFocus={[Function]}
                                  required={false}
                                  type="checkbox"
                                />
                              </ControlledInput>
                              <div>
                                <FormLabel
                                  className="ControlledInputField__ControlledInputField__label___a9J52 ControlledInputField__ControlledInputField__label--light___2G2AZ"
                                  htmlFor="__cf_builtin_admin"
                                  required={false}
                                  requiredText="required"
                                  testId="cf-ui-form-label"
                                >
                                  <label
                                    className="FormLabel__FormLabel___3d6zQ ControlledInputField__ControlledInputField__label___a9J52 ControlledInputField__ControlledInputField__label--light___2G2AZ"
                                    data-test-id="cf-ui-form-label"
                                    htmlFor="__cf_builtin_admin"
                                  >
                                    Admin
                                  </label>
                                </FormLabel>
                              </div>
                            </div>
                          </ControlledInputField>
                        </CheckboxField>
                      </li>
                    </DropdownListItem>
                    <DropdownListItem
                      isActive={false}
                      isDisabled={false}
                      isTitle={false}
                      key="police"
                      testId="cf-ui-dropdown-list-item"
                    >
                      <li
                        className="DropdownListItem__DropdownListItem___LOUnP"
                        data-test-id="cf-ui-dropdown-list-item"
                      >
                        <CheckboxField
                          checked={false}
                          id="police"
                          inputType="checkbox"
                          labelIsLight={true}
                          labelText="Police officer"
                          onChange={[Function]}
                          testId="cf-ui-checkbox-field"
                          value="police"
                        >
                          <ControlledInputField
                            checked={false}
                            id="police"
                            inputType="checkbox"
                            labelIsLight={true}
                            labelText="Police officer"
                            onChange={[Function]}
                            testId="cf-ui-checkbox-field"
                            value="police"
                          >
                            <div
                              className="ControlledInputField__ControlledInputField___2uIG9"
                              data-test-id="cf-ui-checkbox-field"
                            >
                              <ControlledInput
                                checked={false}
                                className="ControlledInputField__ControlledInputField__input___3OMYB"
                                disabled={false}
                                id="police"
                                labelText="Police officer"
                                onChange={[Function]}
                                required={false}
                                testId="cf-ui-controlled-input"
                                type="checkbox"
                                value="police"
                              >
                                <input
                                  aria-label="Police officer"
                                  checked={false}
                                  className="ControlledInput__ControlledInput___2XK3j ControlledInputField__ControlledInputField__input___3OMYB"
                                  data-test-id="cf-ui-controlled-input"
                                  disabled={false}
                                  id="police"
                                  onBlur={[Function]}
                                  onChange={[Function]}
                                  onFocus={[Function]}
                                  required={false}
                                  type="checkbox"
                                  value="police"
                                />
                              </ControlledInput>
                              <div>
                                <FormLabel
                                  className="ControlledInputField__ControlledInputField__label___a9J52 ControlledInputField__ControlledInputField__label--light___2G2AZ"
                                  htmlFor="police"
                                  required={false}
                                  requiredText="required"
                                  testId="cf-ui-form-label"
                                >
                                  <label
                                    className="FormLabel__FormLabel___3d6zQ ControlledInputField__ControlledInputField__label___a9J52 ControlledInputField__ControlledInputField__label--light___2G2AZ"
                                    data-test-id="cf-ui-form-label"
                                    htmlFor="police"
                                  >
                                    Police officer
                                  </label>
                                </FormLabel>
                              </div>
                            </div>
                          </ControlledInputField>
                        </CheckboxField>
                      </li>
                    </DropdownListItem>
                    <DropdownListItem
                      isActive={false}
                      isDisabled={false}
                      isTitle={false}
                      key="thief"
                      testId="cf-ui-dropdown-list-item"
                    >
                      <li
                        className="DropdownListItem__DropdownListItem___LOUnP"
                        data-test-id="cf-ui-dropdown-list-item"
                      >
                        <CheckboxField
                          checked={false}
                          id="thief"
                          inputType="checkbox"
                          labelIsLight={true}
                          labelText="Thief"
                          onChange={[Function]}
                          testId="cf-ui-checkbox-field"
                          value="thief"
                        >
                          <ControlledInputField
                            checked={false}
                            id="thief"
                            inputType="checkbox"
                            labelIsLight={true}
                            labelText="Thief"
                            onChange={[Function]}
                            testId="cf-ui-checkbox-field"
                            value="thief"
                          >
                            <div
                              className="ControlledInputField__ControlledInputField___2uIG9"
                              data-test-id="cf-ui-checkbox-field"
                            >
                              <ControlledInput
                                checked={false}
                                className="ControlledInputField__ControlledInputField__input___3OMYB"
                                disabled={false}
                                id="thief"
                                labelText="Thief"
                                onChange={[Function]}
                                required={false}
                                testId="cf-ui-controlled-input"
                                type="checkbox"
                                value="thief"
                              >
                                <input
                                  aria-label="Thief"
                                  checked={false}
                                  className="ControlledInput__ControlledInput___2XK3j ControlledInputField__ControlledInputField__input___3OMYB"
                                  data-test-id="cf-ui-controlled-input"
                                  disabled={false}
                                  id="thief"
                                  onBlur={[Function]}
                                  onChange={[Function]}
                                  onFocus={[Function]}
                                  required={false}
                                  type="checkbox"
                                  value="thief"
                                />
                              </ControlledInput>
                              <div>
                                <FormLabel
                                  className="ControlledInputField__ControlledInputField__label___a9J52 ControlledInputField__ControlledInputField__label--light___2G2AZ"
                                  htmlFor="thief"
                                  required={false}
                                  requiredText="required"
                                  testId="cf-ui-form-label"
                                >
                                  <label
                                    className="FormLabel__FormLabel___3d6zQ ControlledInputField__ControlledInputField__label___a9J52 ControlledInputField__ControlledInputField__label--light___2G2AZ"
                                    data-test-id="cf-ui-form-label"
                                    htmlFor="thief"
                                  >
                                    Thief
                                  </label>
                                </FormLabel>
                              </div>
                            </div>
                          </ControlledInputField>
                        </CheckboxField>
                      </li>
                    </DropdownListItem>
                  </ul>
                </DropdownList>
              </div>
            </InViewport>
          </div>
        </Portal>
      </DropdownContainer>
    </div>
  </Dropdown>
</SpaceRoleEditor>
`;
